sort.basic.bubble.AlgBubbleSort1.scala.code
var boule= true
var c =0
var temp=0
def bubbleSort()  {
  while(boule){
  	for(i<- 0 to lgr-2){
    	if(getValeur(i)>getValeur(i+1)){
      	temp = getValeur(i)
      	setValeur(i,getValeur(i+1))
      	setValeur(i+1,temp)
      	c+=1
    	}
    
  	}
    if(c==0){
      boule=false
    }
    c=0
}
}